--- a/ProjetoFarmacia/src/com/projetofarmacia/interfaces/ReservarProduto.form
+++ b/ProjetoFarmacia/src/com/projetofarmacia/interfaces/ReservarProduto.form
@@ -74,7 +74,7 @@
                       <Group type="102" attributes="0">
                           <Component id="campoNome" min="-2" pref="407" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="campoCPF" min="-2" pref="147" max="-2" attributes="0"/>
+                          <Component id="campoTelefone" min="-2" pref="147" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace pref="30" max="32767" attributes="0"/>
@@ -94,7 +94,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="campoNome" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="campoCPF" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="campoTelefone" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="59" max="32767" attributes="0"/>
               </Group>
@@ -122,7 +122,7 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JFormattedTextField" name="campoCPF">
+        <Component class="javax.swing.JFormattedTextField" name="campoTelefone">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="db" green="98" red="34" type="rgb"/>
@@ -187,6 +187,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Reservar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="campoReservarActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
