--- a/ProjetoFarmacia/src/com/projetofarmacia/interfaces/TelaFarmaceutico.form
+++ b/ProjetoFarmacia/src/com/projetofarmacia/interfaces/TelaFarmaceutico.form
@@ -159,6 +159,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Procurar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnProcurarActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="campoNome">
               <Properties>
@@ -288,6 +291,10 @@
                       <TableHeader reorderingAllowed="false" resizingAllowed="false"/>
                     </Property>
                   </Properties>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JTable()"/>
+                    <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+                  </AuxValues>
                 </Component>
               </SubComponents>
             </Container>
@@ -326,6 +333,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Carrinho"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCarrinhoActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
