--- a/ProjetoFarmacia/src/com/projetofarmacia/interfaces/ConsultarReservados.form
+++ b/ProjetoFarmacia/src/com/projetofarmacia/interfaces/ConsultarReservados.form
@@ -61,7 +61,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="btnProcurar" min="-2" max="-2" attributes="0"/>
                           <EmptySpace pref="18" max="32767" attributes="0"/>
-                          <Component id="btnProcurar1" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnCarrinho" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -80,7 +80,7 @@
                       <Component id="campoPesquisa" min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="btnProcurar" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                          <Component id="btnProcurar1" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                          <Component id="btnCarrinho" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -170,17 +170,41 @@
                   <Font name="Segoe UI Black" size="11" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="6" rowCount="0">
+                  <Table columnCount="10" rowCount="0">
                     <Column editable="true" title="id" type="java.lang.Object"/>
                     <Column editable="false" title="Nome" type="java.lang.String"/>
                     <Column editable="false" title="Telefone" type="java.lang.Object"/>
                     <Column editable="false" title="Status" type="java.lang.Object"/>
                     <Column editable="false" title="produtos" type="java.lang.Object"/>
                     <Column editable="false" title="Farmacia" type="java.lang.Object"/>
+                    <Column editable="true" title="quantidade" type="java.lang.Object"/>
+                    <Column editable="true" title="preco" type="java.lang.Object"/>
+                    <Column editable="true" title="datavalidade" type="java.lang.Object"/>
+                    <Column editable="true" title="func" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
                       <Editor/>
@@ -224,7 +248,7 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JButton" name="btnProcurar1">
+        <Component class="javax.swing.JButton" name="btnCarrinho">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="db" green="98" red="34" type="rgb"/>
@@ -240,6 +264,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Carrinho"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCarrinhoActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
